syntax = "proto3";

option go_package = "github.com/khanghh/mcrunner/pkg/proto;proto";

import "google/protobuf/empty.proto";


enum Status {
  STATUS_UNKNOWN = 0;
  STATUS_RUNNING = 1;
  STATUS_STOPPING = 2;
  STATUS_STOPPED = 3;
}

message PtyBuffer {
  bytes data = 1;
}

message PtyResize {
  uint32 cols = 1;
  uint32 rows = 2;
}

message PtyStatus {
  Status status = 2;
}

message PtyError {
  string code = 1;
  string message = 2;
}

message ServerState {
  Status status = 1;
  int32 pid = 2;
  double tps = 3;
  uint64 uptime_sec = 4;
  uint64 memory_usage = 5;
  uint64 memory_limit = 6;
  double cpu_usage = 7;
  double cpu_limit = 8;
  uint64 disk_usage = 9;
  uint64 disk_size = 10;
}

// ConsoleMessage multiplexes PTY data and resize events in a single bidi stream
message ConsoleMessage {
  oneof payload {
    PtyError pty_error = 1;
    PtyBuffer pty_buffer = 2;
    PtyResize pty_resize = 3;
    PtyStatus pty_status = 4;
  }
}

message CommandRequest {
  string command = 1;
}

// ===== gRPC services =====
service MCRunner {
  // Lifecycle controls
  rpc StartServer(google.protobuf.Empty) returns (google.protobuf.Empty);
  rpc StopServer(google.protobuf.Empty) returns (google.protobuf.Empty);
  rpc KillServer(google.protobuf.Empty) returns (google.protobuf.Empty);
  rpc RestartServer(google.protobuf.Empty) returns (google.protobuf.Empty);

  // Server state
  rpc GetState(google.protobuf.Empty) returns (ServerState);

  // Console commands
  rpc SendCommand(CommandRequest) returns (google.protobuf.Empty);
  rpc ResizeConsole(PtyResize) returns (google.protobuf.Empty);

  // Streams live console output and state
  rpc StreamConsole(stream ConsoleMessage) returns (stream ConsoleMessage);
  rpc StreamState(google.protobuf.Empty) returns (stream ServerState);
}
